--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Martox16/TP05-CYG_YANO.git" 
+  },
   "author": "lerner cygiel",
   "license": "ISC"
 }
